--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "@openzeppelin/hardhat-upgrades": "^1.17.0",
+    "boring-solidity": "1.3.1",
     "hardhat": "^2.9.6"
   },
   "devDependencies": {
